--- a/tampilan.html
+++ b/tampilan.html
@@ -71,7 +71,7 @@
   </div>
   <div class="btn-group">
     <a href="cpanel.html" class="btn">Create Panel</a>
-    <a href="admin.html" class="btn">Admin Panel</a>
+    <a href="https://riifinityadmin.netlify.app/" class="btn">Admin Panel</a>
   </div>
 </body>
 </html>
