--- a/cpanel.html
+++ b/cpanel.html
@@ -171,7 +171,7 @@
     errorMessage.classList.add("hidden");
     submitButton.disabled = true;
 
-    const apiUrl = `https://apikey.sazxofficial.web.id/api/pterodactyl/create?username=${encodeURIComponent(username)}&ram=${ram}&disk=${disk}&cpu=${cpu}&eggid=15&nestid=5&loc=1&domain=riifinityspace.vipstoree.my.id&ptla=ptla_WCwslRvqEzsTTNZ1vvqHSDBUyKiiGzyd1edORbzM7Pn&ptlc=ptlc_rmPUjvqThgJXx0PtKSBhgzp84WDMVOYm23zcCaz4hGN`;
+    const apiUrl = `https://apikey.sazxofficial.web.id/api/pterodactyl/create?username=${encodeURIComponent(username)}&ram=${ram}&disk=${disk}&cpu=${cpu}&eggid=15&nestid=5&loc=1&domain=https://riifinityxgyzk.privatserver.my.id&ptla=ptla_QaLMS70iqXCEeTr49aOLJA9b0BusRBsFyYlnMhWzShr&ptlc=ptlc_UhVcLCzRvDlqTLliy6Be0mK7q62MhS7jm0LwtUXfcqu`;
 
     try {
       const response = await fetch(apiUrl);
